# DSAN6700-Week1-Problem4

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ml_app-ci.yml
_sources/autoapi/ml_app/: index.rst.txt
_sources/autoapi/ml_app/inference/: index.rst.txt
_sources/autoapi/ml_app/train/: index.rst.txt
_sources/autoapi/ml_app/visualize/: index.rst.txt
autoapi/: index.html
autoapi/ml_app/: index.html
autoapi/ml_app/__main__/: index.html
autoapi/ml_app/inference/: index.html
autoapi/ml_app/train/: index.html
autoapi/ml_app/visualize/: index.html
docs/: README.rst
docs/source/: conf.py  index.rst
ml_app/: inference.py  train.py
